--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <div class="container">
         <div class="text-container">
             <div class="scrolling-text">/ WHAT IS HOME? / HOW DO WE DEFINE IT?</div>
-        </div>    
+        </div>
+        <video autoplay muted loop playsinline>
+            <source src="/media/children.mp4" type="video/mp4">
+        </video>
+        <div id="bahay-text">BAHAY.</div>    
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
