add foundational html for section 2, fix bahay title

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="section">
+    <div class="section section-1">
         <div class="overlay">
             <div class ="text-overlay">
-                <h1 class="bahay-title">/ BAHAY /</h1>
                 <img id="flower-img" src="/media/flower.png" alt="Tropical flower">
                 <p class="bahay-text">a website about home. best viewed on desktop, fullscreen.</p>
             </div>
@@ -37,6 +36,10 @@
             </video>   
         </div>
 
+        <div class="bahay-container">
+            <h1 class="bahay-title">/ BAHAY /</h1>
+        </div>
+
         <div class="scroll-container">
             <p class="scroll-text">scroll down</p>
             <div class="arrow-container">
@@ -44,12 +47,21 @@
             </div>
           </div>
 
+    </div>
 
-
+    <div class="section section-2">
+        <p class="childhood-text c1">during my childhood, home / or bahay in tagalog / always had a concrete meaning.</p>
+        <div class="image-marquee">
+            <img src="/media/family-vintage.jpg" alt="Image of my family" class="marquee-image">
+            <img src="/media/home-vintage.jpg" alt="Image of my home" class="marquee-image">
+            <img src="/media/sd-vintage.jpg" alt="Image of San Diego" class="marquee-image">
+        </div>
+        <p class="childhood-text c2">home was san diego, california. it was a physical place where all my memories were made.</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+
 
     <script src="script.js"></script>
 </body>
