add section 2 + animations

--- a/index.html
+++ b/index.html
@@ -50,13 +50,17 @@
     </div>
 
     <div class="section section-2">
-        <p class="childhood-text c1">during my childhood, home / or bahay in tagalog / always had a concrete meaning.</p>
-        <div class="image-marquee">
-            <img src="/media/family-vintage.jpg" alt="Image of my family" class="marquee-image">
-            <img src="/media/home-vintage.jpg" alt="Image of my home" class="marquee-image">
-            <img src="/media/sd-vintage.jpg" alt="Image of San Diego" class="marquee-image">
+        <div class="childhood-text">
+            <p class="c1">during my childhood, home / or bahay in tagalog / always had a concrete meaning.</p>
         </div>
-        <p class="childhood-text c2">home was san diego, california. it was a physical place where all my memories were made.</p>
+        <div class="image-container">
+            <img src="/media/family-vintage.jpg" alt="Image of my family" class="childhood-image">
+            <img src="/media/home-vintage.jpg" alt="Image of my home" class="childhood-image">
+            <img src="/media/sd-vintage.jpg" alt="Image of San Diego" class="childhood-image">
+        </div>
+        <div class ="childhood-text">
+            <p class="c2">home was san diego, california. it was a physical place where all my memories were made.</p>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
