--- a/index.html
+++ b/index.html
@@ -61,6 +61,48 @@
         <div class ="childhood-text">
             <p class="c2">home was san diego, california. it was a physical place where all my memories were made.</p>
         </div>
+
+    </div>
+
+    <div class="section section-3">
+        <p class="page-break">⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯</p>
+        <div class="blurry-text-container">
+          <p class="blurry-text">but ...as the years go on, my definition of home blurs.</p>
+        </div>
+      
+        <div class="centered-text-container">
+          <h2 class="home-question">
+            <span class="question-part">is home a physical place? ❀</span><br>
+            <span class="question-part">a feeling? ❀❀</span><br>
+            <span class="question-part">a place of comfort? ❀❀❀</span>
+          </h2>
+        </div>
+
+        <div class="image-gallery">
+            <div class="image-item">
+                <img src="/media/sketch-images/sketch-1.jpg" alt="image of my family">
+            </div>
+            <div class="image-item">
+                <img src="/media/sketch-images/sketch-2.jpg" alt="selfie with my family">
+            </div>
+            <div class="image-item">
+                <img src="/media/sketch-images/sketch-3.jpg" alt="image at the beach">
+            </div>
+            <div class="image-item">
+                <img src="/media/sketch-images/sketch-4.jpg" alt="image of me with a coca-cola bottle">
+            </div>
+            <div class="image-item">
+                <img src="/media/sketch-images/sketch-5.jpg" alt="image of my family and i with santa hats">
+            </div>
+            <div class="image-item">
+                <img src="/media/sketch-images/sketch-6.jpg" alt="image of my sisters and i at the beach">
+            </div>
+        </div>
+
+      </div>
+
+    <div class="section section-4">
+        
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
