--- a/index.html
+++ b/index.html
@@ -102,8 +102,18 @@
       </div>
 
     <div class="section section-4">
-        
+        <p class="page-break">⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯</p>
+        <div class="end-message">
+            <h2 class="closing-text">HOME IS...</h2>
+            <p class="closing-subtext">anything you want it to be.</p>
+                <div class="closing-marquee">
+                    <div class="scrolling-text-2"> / freedom / joy / love / the philippines / yale university / family / my twin sisters / san diego, california / friends / my mother </div>
+                </div>
+                <p class="closing-subtext">so... what makes up your home?</h1>
+            <p class="credit-text">made with ❀ by brianna magtoto / cs50 final project</p>
+        </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
